--- a/five.html
+++ b/five.html
@@ -23,7 +23,7 @@ video {
   position: absolute;
   animation-name: move;
   animation-duration: 10s;
-  animation-iteration-count: 1;
+  animation-iteration-count: infinite;
   animation-timing-function: linear;
   background-color: transparent;
   margin: 0; padding: 0;
