--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ video {
   position: absolute;
   animation-name: move;
   animation-duration: 10s;
-  animation-iteration-count: 1;
+  animation-iteration-count: infinite;
   animation-timing-function: linear;
   background-color: transparent;
   margin: 0; padding: 0;
@@ -80,6 +80,7 @@ video {
   <script src="https://unpkg.com/hydra-synth"></script>
 </head>
 <body>
+
 
   <!-- <div id="error" >
     <audio preload="auto" >
@@ -227,7 +228,11 @@ video {
   <div style="background-color: transparent; position: absolute; width: 200px; height: 80px;
   top: 2700px; left: 4800px; font-size: 20px; padding: 20px;">
     <a href="./one.html" style="text-decoration: none; color: white;">
-      <pre>Back to meeting!<img style="vertical-align:middle" src="./img/link_white_24dp.svg"></pre></a>
+      <pre>Back to meeting!<img style="vertical-align:middle" src="./img/link_white_24dp.svg"></pre>
+    </a>
+    <a href="./log.html" style="text-decoration: none; color: white;">
+      <pre>Log<img style="vertical-align:middle" src="./img/link_white_24dp.svg"></pre>
+    </a>
   </div>
 
   <div class="codeblock">
