--- a/log.html
+++ b/log.html
@@ -83,7 +83,7 @@ video {
 
 <!-- log -->
   <div style="color: cornsilk; font-size: 16px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    position: absolute; top: 30%; left: 200%; width: 600px;">
+    position: absolute; top: 30%; left: 1600px; width: 600px;">
        <h1>Initial intent</h1>
        <p>Building upon the last branch, what I am keen to achieve here is a 
          multiplayer system, or at least, some experience similar to multiplayer. 
@@ -163,45 +163,54 @@ video {
        </p>
        <img src="./img/button.PNG" width="90%">
        <img src="./img/button2.PNG" width="90%">
-       <p>
-        Add background iterations by changing color gradient, so that users would 
-        know it’s a different virtual space when jumping to the next page.
-        Same with the end button, each page applies a different visual overlay.<br><br>
-        Add a link icon to the hidden back-to-start option, make it more apparent for users.<br><br>
-        Changed participants to 11 using photoshop.
-       </p>
-       <img src="./img/bgc2.PNG" width="50%">
-       <img src="./img/bgc3.PNG" width="50%">
-       <img src="./img/participants.PNG" width="90%">
-       <h1>Reflections on action</h1>
-       <p>
-        I’m glad to achieve that multiplayer effect finally, even if it is “fake”. 
-        Also, I haven’t considered sound design seriously in my previous branches, 
-        it can be world-changing, even just with a single sound. Sonic space would 
-        be an important aspect to consider for my future works. Inspired by last week’s class, 
-        designing a web brush/pen would be a direction for me to explore since there are 
-        plenty possible space out there.
-       </p>
-       <p>
-        From Patrick’s presentation, I’m a bit surprised how detailed 
-        the reflection-in-action is and how it focused on small pieces. 
-        I was thinking these small details were not really worth recording, 
-        and general ideas should be more focused on. Until I realize I am kind of 
-        unconsciously doing a similar thing. I always like to keep small notes while 
-        doing my work, maybe a flash of an idea, a small style change, a design constrain 
-        for the project, and so on. Not sure how many people still keep notes on paper, 
-        might not be very environment-friendly, I just found it hard for me to do notes 
-        digitally.  My expression might be not accurate, not really not worth recording, 
-        writing them down properly just never come to my mind. It’s a good starting point, 
-        I might do that more consciously for future works.
-       </p>
-       <img src="./img/note.jpg" width="70%">
-       <img src="./img/note1.jpg" width="70%">
-       <img src="./img/note2.jpg" width="70%">
    </div>
+
+   <div style="color: cornsilk; font-size: 16px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+   position: absolute; top: 30%; left: 2500px; width: 600px;">
+      <p>
+       Add background iterations by changing color gradient, so that users would 
+       know it’s a different virtual space when jumping to the next page.
+       Same with the end button, each page applies a different visual overlay.<br><br>
+       Add a link icon to the hidden back-to-start option, make it more apparent for users.<br><br>
+       Changed participants to 11 using photoshop.
+      </p>
+      <img src="./img/bgc2.PNG" width="50%">
+      <img src="./img/bgc3.PNG" width="50%">
+      <img src="./img/participants.PNG" width="90%">
+      <h1>Reflections on action</h1>
+      <p>
+       I’m glad to achieve that multiplayer effect finally, even if it is “fake”. 
+       Also, I haven’t considered sound design seriously in my previous branches, 
+       it can be world-changing, even just with a single sound. Sonic space would 
+       be an important aspect to consider for my future works. Inspired by last week’s class, 
+       designing a web brush/pen would be a direction for me to explore since there are 
+       plenty possible space out there.
+      </p>
+      <p>
+       From Patrick’s presentation, I’m a bit surprised how detailed 
+       the reflection-in-action is and how it focused on small pieces. 
+       I was thinking these small details were not really worth recording, 
+       and general ideas should be more focused on. Until I realize I am kind of 
+       unconsciously doing a similar thing. I always like to keep small notes while 
+       doing my work, maybe a flash of an idea, a small style change, a design constrain 
+       for the project, and so on. Not sure how many people still keep notes on paper, 
+       might not be very environment-friendly, I just found it hard for me to do notes 
+       digitally.  My expression might be not accurate, not really not worth recording, 
+       writing them down properly just never come to my mind. It’s a good starting point, 
+       I might do that more consciously for future works.
+      </p>
+      <img src="./img/note.jpg" width="70%">
+      <img src="./img/note1.jpg" width="70%">
+      <img src="./img/note2.jpg" width="70%">
+  </div>
 <!-- log -->
 
-
+<div style="background-color: transparent; position: absolute; width: 200px; height: 80px;
+top: 3600px; left: 5800px; font-size: 20px; padding: 20px;">
+  <a href="./index.html" style="text-decoration: none; color: white;">
+    <pre>Back to meeting!<img style="vertical-align:middle" src="./img/link_white_24dp.svg"></pre>
+  </a>
+</div>
 
   <!-- <div id="error" >
     <audio preload="auto" >
